--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -3404,14 +3404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "96501637-b230-4a68-a3fa-64ff6da47ece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02e20e1e530549b0a767a462d66d71bb",
+       "model_id": "4dddd594ecb1495a808ed0ac94691555",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3425,7 +3425,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "486b5c74076f426f9f0ce965a0f1a020",
+       "model_id": "1c91100394194bf39f8a7092e5c9ef82",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3438,12 +3438,14 @@
     }
    ],
    "source": [
-    "# 3.9 Design og produktutvikling\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.patches as patches\n",
     "import math\n",
+    "import numpy as np\n",
     "\n",
-    "# Beregningsfunksjoner\n",
+    "# --- Beregningsfunksjoner ---\n",
     "def calculate_prism_volume(length, width, height):\n",
     "    return length * width * height\n",
     "\n",
@@ -3452,6 +3454,7 @@
     "\n",
     "def calculate_area(length, width):\n",
     "    return length * width\n",
+    "\n",
     "def calculate_percentage(part, whole):\n",
     "    return (part / whole) * 100\n",
     "\n",
@@ -3465,13 +3468,35 @@
     "    return a / b\n",
     "\n",
     "def crop_to_aspect_ratio(width, height, target_ratio_width, target_ratio_height):\n",
-    "    # Bevar bredde, juster høyde\n",
+    "    if target_ratio_width == 0 or target_ratio_height == 0:\n",
+    "        raise ValueError(\"Målformat kan ikke ha null som verdi.\")\n",
     "    one_part = width / target_ratio_width\n",
     "    new_height = one_part * target_ratio_height\n",
     "    cropped_pixels = height - new_height\n",
     "    return new_height, cropped_pixels\n",
     "\n",
-    "# Oppgavetyper\n",
+    "def simulate_image_crop(width, height, target_ratio_width, target_ratio_height):\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.set_title(\"Bildebeskjæring\")\n",
+    "    ax.set_xlim(0, width)\n",
+    "    ax.set_ylim(0, height)\n",
+    "    ax.set_aspect('equal')\n",
+    "    \n",
+    "    # Originalt bilde\n",
+    "    ax.add_patch(patches.Rectangle((0, 0), width, height, fill=True, color='lightblue', label=\"Original\"))\n",
+    "\n",
+    "    # Beskåret område\n",
+    "    try:\n",
+    "        new_height, _ = crop_to_aspect_ratio(width, height, target_ratio_width, target_ratio_height)\n",
+    "        ax.add_patch(patches.Rectangle((0, 0), width, new_height, fill=True, color='orange', alpha=0.6, label=\"Beskjært\"))\n",
+    "    except ValueError:\n",
+    "        ax.text(width/2, height/2, \"Feil i målforhold\", ha='center')\n",
+    "\n",
+    "    ax.legend()\n",
+    "    plt.gca().invert_yaxis()  # Vis toppen øverst\n",
+    "    plt.show()\n",
+    "\n",
+    "# --- Widgets ---\n",
     "task_type = widgets.Dropdown(\n",
     "    options=[\n",
     "        'Volum', 'Areal', 'Prosent', 'Forhold', 'Piksler',\n",
@@ -3481,7 +3506,9 @@
     "    description='Oppgave:',\n",
     ")\n",
     "\n",
-    "# Input-felt\n",
+    "unit_area = widgets.Dropdown(options=['cm²', 'm²'], value='cm²', description='Arealenhet:')\n",
+    "unit_volume = widgets.Dropdown(options=['cm³', 'm³', 'liter'], value='cm³', description='Volumenhet:')\n",
+    "\n",
     "length = widgets.FloatText(description='Lengde:')\n",
     "width = widgets.FloatText(description='Bredde:')\n",
     "height = widgets.FloatText(description='Høyde:')\n",
@@ -3497,17 +3524,16 @@
     "target_w = widgets.IntText(description='Målformat bredde:')\n",
     "target_h = widgets.IntText(description='Målformat høyde:')\n",
     "\n",
-    "# Output\n",
     "output = widgets.Output()\n",
     "\n",
-    "# Oppdater input-felt\n",
+    "# --- Inputvisning ---\n",
     "def update_inputs(change):\n",
     "    with output:\n",
     "        clear_output()\n",
     "        if change['new'] == 'Volum':\n",
-    "            display(length, width, height, radius)\n",
+    "            display(length, width, height, radius, unit_volume)\n",
     "        elif change['new'] == 'Areal':\n",
-    "            display(length, width)\n",
+    "            display(length, width, unit_area)\n",
     "        elif change['new'] == 'Prosent':\n",
     "            display(part, whole)\n",
     "        elif change['new'] == 'Forhold':\n",
@@ -3518,50 +3544,56 @@
     "            display(a, b)\n",
     "        elif change['new'] == 'Bildeformat og beskjæring':\n",
     "            display(img_width, img_height, target_w, target_h)\n",
-    "        elif change['new'] == 'Quit':\n",
-    "            print(\"Avslutter programmet.\")\n",
     "\n",
-    "# Kalkuler resultat\n",
+    "# --- Kalkulasjon ---\n",
     "def calculate_result(change):\n",
     "    with output:\n",
     "        clear_output()\n",
-    "        if task_type.value == 'Volum':\n",
-    "            if radius.value > 0:\n",
-    "                result = calculate_cylinder_volume(radius.value, height.value)\n",
-    "                print(f\"Volum av sylinder: {result:.2f} cm³\")\n",
-    "            else:\n",
-    "                result = calculate_prism_volume(length.value, width.value, height.value)\n",
-    "                print(f\"Volum av prisme: {result:.2f} cm³\")\n",
-    "        elif task_type.value == 'Areal':\n",
-    "            result = calculate_area(length.value, width.value)\n",
-    "            print(f\"Areal: {result:.2f} cm²\")\n",
-    "        elif task_type.value == 'Prosent':\n",
-    "            result = calculate_percentage(part.value, whole.value)\n",
-    "            print(f\"Prosent: {result:.2f}%\")\n",
-    "        elif task_type.value == 'Forhold':\n",
-    "            result = calculate_ratio(a.value, b.value)\n",
-    "            print(f\"Forhold: {result:.2f}\")\n",
-    "        elif task_type.value == 'Piksler':\n",
-    "            result = calculate_pixels(resolution.value, bit_depth.value)\n",
-    "            print(f\"Totalt antall piksler: {result}\")\n",
-    "        elif task_type.value == 'Gyldne Snitt':\n",
-    "            result = calculate_golden_ratio(a.value, b.value)\n",
-    "            print(f\"Forholdet mellom {a.value} og {b.value} er {result:.3f} (Gyldne snitt ≈ 1.618)\")\n",
-    "        elif task_type.value == 'Bildeformat og beskjæring':\n",
-    "            new_h, cropped = crop_to_aspect_ratio(\n",
-    "                img_width.value, img_height.value,\n",
-    "                target_w.value, target_h.value\n",
-    "            )\n",
-    "            print(f\"For å få formatet {target_w.value}:{target_h.value} må høyden beskjæres til {int(new_h)} piksler.\")\n",
-    "            print(f\"Du må fjerne {int(cropped)} piksler i høyden.\")\n",
+    "        try:\n",
+    "            if task_type.value == 'Volum':\n",
+    "                if radius.value > 0:\n",
+    "                    vol = calculate_cylinder_volume(radius.value, height.value)\n",
+    "                else:\n",
+    "                    vol = calculate_prism_volume(length.value, width.value, height.value)\n",
+    "                if unit_volume.value == 'liter':\n",
+    "                    vol /= 1000  # cm³ til liter\n",
+    "                elif unit_volume.value == 'm³':\n",
+    "                    vol /= 1_000_000  # cm³ til m³\n",
+    "                print(f\"Volum: {vol:.2f} {unit_volume.value}\")\n",
+    "            elif task_type.value == 'Areal':\n",
+    "                area = calculate_area(length.value, width.value)\n",
+    "                if unit_area.value == 'm²':\n",
+    "                    area /= 10_000  # cm² til m²\n",
+    "                print(f\"Areal: {area:.2f} {unit_area.value}\")\n",
+    "            elif task_type.value == 'Prosent':\n",
+    "                print(f\"Prosent: {calculate_percentage(part.value, whole.value):.2f}%\")\n",
+    "            elif task_type.value == 'Forhold':\n",
+    "                print(f\"Forhold: {calculate_ratio(a.value, b.value):.2f}\")\n",
+    "            elif task_type.value == 'Piksler':\n",
+    "                print(f\"Totalt antall piksler: {calculate_pixels(resolution.value, bit_depth.value)}\")\n",
+    "            elif task_type.value == 'Gyldne Snitt':\n",
+    "                print(f\"Forholdet mellom {a.value} og {b.value} er {calculate_golden_ratio(a.value, b.value):.3f} (Gyldne snitt ≈ 1.618)\")\n",
+    "            elif task_type.value == 'Bildeformat og beskjæring':\n",
+    "                new_h, cropped = crop_to_aspect_ratio(\n",
+    "                    img_width.value, img_height.value,\n",
+    "                    target_w.value, target_h.value\n",
+    "                )\n",
+    "                print(f\"For å få formatet {target_w.value}:{target_h.value} må høyden beskjæres til {int(new_h)} piksler.\")\n",
+    "                print(f\"Du må fjerne {int(cropped)} piksler i høyden.\")\n",
+    "                simulate_image_crop(img_width.value, img_height.value, target_w.value, target_h.value)\n",
+    "        except ZeroDivisionError:\n",
+    "            print(\"Feil: Deling på null.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"En feil oppstod: {e}\")\n",
     "\n",
-    "# Koble hendelser\n",
+    "# --- Koble hendelser ---\n",
     "task_type.observe(update_inputs, names='value')\n",
     "for widget in [length, width, height, radius, part, whole, a, b,\n",
-    "               resolution, bit_depth, img_width, img_height, target_w, target_h]:\n",
+    "               resolution, bit_depth, img_width, img_height, target_w, target_h,\n",
+    "               unit_area, unit_volume]:\n",
     "    widget.observe(calculate_result, names='value')\n",
     "\n",
-    "# Vis grensesnitt\n",
+    "# --- Start GUI ---\n",
     "display(task_type, output)\n",
     "update_inputs({'new': 'Volum'})"
    ]
