--- a/Matematikk SR boka.ipynb
+++ b/Matematikk SR boka.ipynb
@@ -2390,9 +2390,7 @@
   {
    "cell_type": "markdown",
    "id": "3d7a2661-7385-43b3-a80c-3fbe44f2e608",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# $\\color{blue}{\\text{Kapittel 3 - Formler}}$"
    ]
@@ -2730,7 +2728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "e482ab53-d2bb-498e-956b-53b3d1a49dfd",
    "metadata": {},
    "outputs": [
@@ -2745,69 +2743,27 @@
       "3. Avslutt\n",
       "4. Fart og sammensatte enheter\n",
       "5. Tetthet og medisinens styrke\n",
-      "6. Fysiske formler og enhetsberegninger\n"
+      "6. Fysiske formler og enhetsberegninger\n",
+      "q: Avslutt programmet\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Velg et alternativ (1-6):  6\n"
+      "Velg et alternativ:  q\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Del 6: Fysiske formler\n",
-      "1. Fart, strekning, tid (v = s/t)\n",
-      "2. Masse = tetthet * volum\n",
-      "3. Volumkonvertering (liter <-> m³)\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Velg et alternativ:  1\n",
-      "Strekning (m) eller Enter:  1000\n",
-      "Fart (m/s) eller Enter:  \n",
-      "Tid (s) eller Enter:  3600\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fart = 0.28 m/s\n",
-      "\n",
-      "Enhetskonvertering og beregninger\n",
-      "1. Konverter en verdi med prefiks\n",
-      "2. Konverter tid\n",
-      "3. Avslutt\n",
-      "4. Fart og sammensatte enheter\n",
-      "5. Tetthet og medisinens styrke\n",
-      "6. Fysiske formler og enhetsberegninger\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Velg et alternativ (1-6):  3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Avslutter programmet.\n"
+      "Program avsluttes.\n"
      ]
     }
    ],
    "source": [
-    "# 3 Formler: 3.3 Enheter. Ordbok for prefikser og deres verdier. \n",
+    "# 3 Formler og geometri: 3.3 Enheter. Ordbok for prefikser og deres verdier. \n",
     "# Ordbok for prefikser med symbol, verdi og navn\n",
     "import re\n",
     "\n",
@@ -3134,9 +3090,13 @@
     "        print(\"4. Fart og sammensatte enheter\")\n",
     "        print(\"5. Tetthet og medisinens styrke\")\n",
     "        print(\"6. Fysiske formler og enhetsberegninger\")\n",
+    "        print(\"q: Avslutt programmet\")\n",
     "\n",
+    "        valg = input(\"Velg et alternativ: \")\n",
+    "        if valg == \"q\":\n",
+    "            print(\"Program avsluttes.\")\n",
+    "            break\n",
     "        choice = input(\"Velg et alternativ (1-6): \")\n",
-    "\n",
     "        if choice == '1':\n",
     "            del_1_meny()\n",
     "        elif choice == '2':\n",
@@ -3155,6 +3115,106 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "367358e1-48fb-48cf-862e-4fd74b95526a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3 Formler og geometri: 3.3 Enheter. Omregning mellom tommer og cm 2: Omregning av sammensatte enheter (km/t og m/s) 3: Energibruk per mil (kWh/mil)\n",
+    "from fractions import Fraction\n",
+    "\n",
+    "def parse_input(value):\n",
+    "    try:\n",
+    "        return float(Fraction(value))\n",
+    "    except ValueError:\n",
+    "        print(\"Ugyldig inndata. Bruk tall eller brøk (f.eks. 1/2).\")\n",
+    "        return None\n",
+    "\n",
+    "def konverter_lengde():\n",
+    "    while True:\n",
+    "        print(\"\\n--- Omregning mellom tommer og cm ---\")\n",
+    "        print(\"1: Tommer til cm\")\n",
+    "        print(\"2: Cm til tommer\")\n",
+    "        print(\"q: Tilbake til hovedmenyen\")\n",
+    "        valg = input(\"Velg (1/2), eller q: \")\n",
+    "        if valg == \"q\":\n",
+    "            return\n",
+    "        elif valg == \"1\":\n",
+    "            tommer = parse_input(input(\"Antall tommer: \"))\n",
+    "            if tommer is not None:\n",
+    "                print(f\"{tommer} tommer = {tommer * 2.54:.2f} cm\")\n",
+    "        elif valg == \"2\":\n",
+    "            cm = parse_input(input(\"Antall cm: \"))\n",
+    "            if cm is not None:\n",
+    "                print(f\"{cm} cm = {cm / 2.54:.2f} tommer\")\n",
+    "        else:\n",
+    "            print(\"Ugyldig valg. Prøv igjen.\")\n",
+    "\n",
+    "def konverter_fart():\n",
+    "    while True:\n",
+    "        print(\"\\n--- Omregning mellom km/t og m/s ---\")\n",
+    "        print(\"1: km/t til m/s\")\n",
+    "        print(\"2: m/s til km/t\")\n",
+    "        print(\"q: Tilbake til hovedmenyen\")\n",
+    "        valg = input(\"Velg (1/2), eller q: \")\n",
+    "        if valg == \"q\":\n",
+    "            return\n",
+    "        elif valg == \"1\":\n",
+    "            kmh = parse_input(input(\"Fart i km/t: \"))\n",
+    "            if kmh is not None:\n",
+    "                print(f\"{kmh} km/t = {kmh / 3.6:.2f} m/s\")\n",
+    "        elif valg == \"2\":\n",
+    "            ms = parse_input(input(\"Fart i m/s: \"))\n",
+    "            if ms is not None:\n",
+    "                print(f\"{ms} m/s = {ms * 3.6:.2f} km/t\")\n",
+    "        else:\n",
+    "            print(\"Ugyldig valg. Prøv igjen.\")\n",
+    "\n",
+    "def energibruk_per_mil():\n",
+    "    while True:\n",
+    "        print(\"\\n--- Energibruk per mil (kWh/mil) ---\")\n",
+    "        print(\"q: Tilbake til hovedmenyen\")\n",
+    "        forbruk_input = input(\"Total energiforbruk i kWh (eller q): \")\n",
+    "        if forbruk_input == \"q\":\n",
+    "            return\n",
+    "        distanse_input = input(\"Kjørt distanse i km (eller q): \")\n",
+    "        if distanse_input == \"q\":\n",
+    "            return\n",
+    "        forbruk = parse_input(forbruk_input)\n",
+    "        distanse = parse_input(distanse_input)\n",
+    "        if forbruk is not None and distanse is not None and distanse != 0:\n",
+    "            per_mil = forbruk / (distanse / 10)\n",
+    "            print(f\"Energibruk per mil: {per_mil:.2f} kWh/mil\")\n",
+    "        else:\n",
+    "            print(\"Ugyldige verdier. Prøv igjen.\")\n",
+    "\n",
+    "def hovedmeny():\n",
+    "    while True:\n",
+    "        print(\"\\n=== HOVEDMENY ===\")\n",
+    "        print(\"1: Omregning mellom tommer og cm\")\n",
+    "        print(\"2: Omregning av sammensatte enheter (km/t og m/s)\")\n",
+    "        print(\"3: Energibruk per mil (kWh/mil)\")\n",
+    "        print(\"q: Avslutt programmet\")\n",
+    "\n",
+    "        valg = input(\"Velg et alternativ: \")\n",
+    "        if valg == \"q\":\n",
+    "            print(\"Program avsluttes.\")\n",
+    "            break\n",
+    "        elif valg == \"1\":\n",
+    "            konverter_lengde()\n",
+    "        elif valg == \"2\":\n",
+    "            konverter_fart()\n",
+    "        elif valg == \"3\":\n",
+    "            energibruk_per_mil()\n",
+    "        else:\n",
+    "            print(\"Ugyldig valg. Prøv igjen.\")\n",
+    "\n",
+    "# Start programmet\n",
+    "hovedmeny()"
    ]
   },
   {
