--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -2118,7 +2118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "577e4061-0e99-4a54-8acb-5acc4167537d",
    "metadata": {},
    "outputs": [
@@ -2133,21 +2133,22 @@
       "3. Avslutt\n",
       "4. Fart og sammensatte enheter\n",
       "5. Tetthet og medisinens styrke\n",
-      "6. Fysiske formler og enhetsberegninger\n"
+      "6. Fysiske formler og enhetsberegninger\n",
+      "q: Avslutt programmet\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 348\u001b[39m\n\u001b[32m    345\u001b[39m             \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mUgyldig valg. Prøv igjen.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    347\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m\"\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m348\u001b[39m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 329\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    326\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m5. Tetthet og medisinens styrke\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    327\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m6. Fysiske formler og enhetsberegninger\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m329\u001b[39m choice = \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mVelg et alternativ (1-6): \u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    331\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m choice == \u001b[33m'\u001b[39m\u001b[33m1\u001b[39m\u001b[33m'\u001b[39m:\n\u001b[32m    332\u001b[39m     del_1_meny()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\ipykernel\\kernelbase.py:1282\u001b[39m, in \u001b[36mKernel.raw_input\u001b[39m\u001b[34m(self, prompt)\u001b[39m\n\u001b[32m   1280\u001b[39m     msg = \u001b[33m\"\u001b[39m\u001b[33mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1281\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[32m-> \u001b[39m\u001b[32m1282\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1283\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1284\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mshell\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1285\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mshell\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1286\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m   1287\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\ipykernel\\kernelbase.py:1325\u001b[39m, in \u001b[36mKernel._input_request\u001b[39m\u001b[34m(self, prompt, ident, parent, password)\u001b[39m\n\u001b[32m   1322\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[32m   1323\u001b[39m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[32m   1324\u001b[39m     msg = \u001b[33m\"\u001b[39m\u001b[33mInterrupted by user\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m-> \u001b[39m\u001b[32m1325\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1326\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[32m   1327\u001b[39m     \u001b[38;5;28mself\u001b[39m.log.warning(\u001b[33m\"\u001b[39m\u001b[33mInvalid Message:\u001b[39m\u001b[33m\"\u001b[39m, exc_info=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: Interrupted by user"
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Velg et alternativ:  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Program avsluttes.\n"
      ]
     }
    ],
@@ -2479,9 +2480,13 @@
     "        print(\"4. Fart og sammensatte enheter\")\n",
     "        print(\"5. Tetthet og medisinens styrke\")\n",
     "        print(\"6. Fysiske formler og enhetsberegninger\")\n",
+    "        print(\"q: Avslutt programmet\")\n",
     "\n",
+    "        valg = input(\"Velg et alternativ: \")\n",
+    "        if valg == \"q\":\n",
+    "            print(\"Program avsluttes.\")\n",
+    "            break\n",
     "        choice = input(\"Velg et alternativ (1-6): \")\n",
-    "\n",
     "        if choice == '1':\n",
     "            del_1_meny()\n",
     "        elif choice == '2':\n",
@@ -2500,6 +2505,133 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cf7ad509-a1c5-47bf-8233-1451ce0fecee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== HOVEDMENY ===\n",
+      "1: Omregning mellom tommer og cm\n",
+      "2: Omregning av sammensatte enheter (km/t og m/s)\n",
+      "3: Energibruk per mil (kWh/mil)\n",
+      "q: Avslutt programmet\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Velg et alternativ:  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Program avsluttes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3 Formler og geometri: 3.3 Enheter. Omregning mellom tommer og cm 2: Omregning av sammensatte enheter (km/t og m/s) 3: Energibruk per mil (kWh/mil)\n",
+    "from fractions import Fraction\n",
+    "\n",
+    "def parse_input(value):\n",
+    "    try:\n",
+    "        return float(Fraction(value))\n",
+    "    except ValueError:\n",
+    "        print(\"Ugyldig inndata. Bruk tall eller brøk (f.eks. 1/2).\")\n",
+    "        return None\n",
+    "\n",
+    "def konverter_lengde():\n",
+    "    while True:\n",
+    "        print(\"\\n--- Omregning mellom tommer og cm ---\")\n",
+    "        print(\"1: Tommer til cm\")\n",
+    "        print(\"2: Cm til tommer\")\n",
+    "        print(\"q: Tilbake til hovedmenyen\")\n",
+    "        valg = input(\"Velg (1/2), eller q: \")\n",
+    "        if valg == \"q\":\n",
+    "            return\n",
+    "        elif valg == \"1\":\n",
+    "            tommer = parse_input(input(\"Antall tommer: \"))\n",
+    "            if tommer is not None:\n",
+    "                print(f\"{tommer} tommer = {tommer * 2.54:.2f} cm\")\n",
+    "        elif valg == \"2\":\n",
+    "            cm = parse_input(input(\"Antall cm: \"))\n",
+    "            if cm is not None:\n",
+    "                print(f\"{cm} cm = {cm / 2.54:.2f} tommer\")\n",
+    "        else:\n",
+    "            print(\"Ugyldig valg. Prøv igjen.\")\n",
+    "\n",
+    "def konverter_fart():\n",
+    "    while True:\n",
+    "        print(\"\\n--- Omregning mellom km/t og m/s ---\")\n",
+    "        print(\"1: km/t til m/s\")\n",
+    "        print(\"2: m/s til km/t\")\n",
+    "        print(\"q: Tilbake til hovedmenyen\")\n",
+    "        valg = input(\"Velg (1/2), eller q: \")\n",
+    "        if valg == \"q\":\n",
+    "            return\n",
+    "        elif valg == \"1\":\n",
+    "            kmh = parse_input(input(\"Fart i km/t: \"))\n",
+    "            if kmh is not None:\n",
+    "                print(f\"{kmh} km/t = {kmh / 3.6:.2f} m/s\")\n",
+    "        elif valg == \"2\":\n",
+    "            ms = parse_input(input(\"Fart i m/s: \"))\n",
+    "            if ms is not None:\n",
+    "                print(f\"{ms} m/s = {ms * 3.6:.2f} km/t\")\n",
+    "        else:\n",
+    "            print(\"Ugyldig valg. Prøv igjen.\")\n",
+    "\n",
+    "def energibruk_per_mil():\n",
+    "    while True:\n",
+    "        print(\"\\n--- Energibruk per mil (kWh/mil) ---\")\n",
+    "        print(\"q: Tilbake til hovedmenyen\")\n",
+    "        forbruk_input = input(\"Total energiforbruk i kWh (eller q): \")\n",
+    "        if forbruk_input == \"q\":\n",
+    "            return\n",
+    "        distanse_input = input(\"Kjørt distanse i km (eller q): \")\n",
+    "        if distanse_input == \"q\":\n",
+    "            return\n",
+    "        forbruk = parse_input(forbruk_input)\n",
+    "        distanse = parse_input(distanse_input)\n",
+    "        if forbruk is not None and distanse is not None and distanse != 0:\n",
+    "            per_mil = forbruk / (distanse / 10)\n",
+    "            print(f\"Energibruk per mil: {per_mil:.2f} kWh/mil\")\n",
+    "        else:\n",
+    "            print(\"Ugyldige verdier. Prøv igjen.\")\n",
+    "\n",
+    "def hovedmeny():\n",
+    "    while True:\n",
+    "        print(\"\\n=== HOVEDMENY ===\")\n",
+    "        print(\"1: Omregning mellom tommer og cm\")\n",
+    "        print(\"2: Omregning av sammensatte enheter (km/t og m/s)\")\n",
+    "        print(\"3: Energibruk per mil (kWh/mil)\")\n",
+    "        print(\"q: Avslutt programmet\")\n",
+    "\n",
+    "        valg = input(\"Velg et alternativ: \")\n",
+    "        if valg == \"q\":\n",
+    "            print(\"Program avsluttes.\")\n",
+    "            break\n",
+    "        elif valg == \"1\":\n",
+    "            konverter_lengde()\n",
+    "        elif valg == \"2\":\n",
+    "            konverter_fart()\n",
+    "        elif valg == \"3\":\n",
+    "            energibruk_per_mil()\n",
+    "        else:\n",
+    "            print(\"Ugyldig valg. Prøv igjen.\")\n",
+    "\n",
+    "# Start programmet\n",
+    "hovedmeny()"
    ]
   },
   {
