--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -3509,7 +3509,7 @@
     "    all_inputs = side_inputs + angle_inputs\n",
     "    output_area = widgets.Output()\n",
     "\n",
-    "    def handle_interaction(change):\n",
+    "    def handle_interaction(change)\n",
     "        with output_area:\n",
     "            clear_output(wait=True)\n",
     "            sider_in = [inp.value for inp in side_inputs]\n",
@@ -3536,14 +3536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "2182e2f9-ad89-4e17-b212-a186f14b712b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45e632939c3349b7bee7ff510842582c",
+       "model_id": "6faf54de638a4f868f2d15b3b3c3a56f",
        "version_major": 2,
        "version_minor": 0
       },
