--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "af44daa3-f013-4a55-a892-a730af741085",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# $\\color{black}{\\text{Kapittel 1 - Grunnleggende regning}}$"
    ]
@@ -17,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1 Grunnleggende regning: 1.1 Hoderegning\n",
+    "# 1 Grunnleggende regning: 1.1 Hoderegning\n",
     "# Addisjon, subtraksjon, multiplikasjon og divisjon\n",
     "\n",
     "# Addisjon\n",
@@ -828,9 +826,7 @@
   {
    "cell_type": "markdown",
    "id": "6c2bff4e-d34a-4f3e-8899-90028331e8d7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# $\\color{green}{\\text{Kapittel 2 - Personlig økonomi}}$"
    ]
@@ -3928,9 +3924,7 @@
   {
    "cell_type": "markdown",
    "id": "7ed278b4-1efc-4b57-ac33-bd7c26df5456",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# $\\color{green}{\\text{Kapittel 4 - Statistikk}}$"
    ]
@@ -4241,9 +4235,7 @@
   {
    "cell_type": "markdown",
    "id": "1199ea16-1315-49b5-ba5c-902e75a2dc7e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# $\\color{red}{\\text{Kapittel 5 - Yrkesøkonomi}}$"
    ]
@@ -4816,7 +4808,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
