--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -3,9 +3,22 @@
   {
    "cell_type": "markdown",
    "id": "af44daa3-f013-4a55-a892-a730af741085",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# $\\color{black}{\\text{Kapittel 1 - Grunnleggende regning}}$"
+    "# $\\color{red}{\\text{Kapittel 1 - Grunnleggende regning}}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2524aa2d-e744-4a0a-902d-e736028557c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "print(sys.version)"
    ]
   },
   {
@@ -488,13 +501,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e41a217-be3e-4347-ba20-acf49b86e1b7",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# Prosentregning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "10ac05cc-c6fb-4936-9c49-07c1810250c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1 Grunnleggende regning: 1.6 Prosent\n",
     "# Regel 1. Del av tallet = (Hele tallet ∙ Prosenten) / 100\n",
     "def beregn_hele_tallet(prosent, kroner):\n",
     "    return kroner * 100 / prosent\n",
@@ -562,7 +584,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1 Grunnleggende regning: 1.6 Prosent\n",
     "# Finn endringen i prosentpoeng mellom to tall\n",
     "while True:\n",
     "    user_input = input(\"Skriv inn startprosent (eller 'q' for å avslutte): \")\n",
@@ -587,7 +608,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1 Grunnleggende regning: 1.7 Prosentvis endring\n",
     "# Regel 2. Endringen i prosent = (Ny verdi – Opprinnelig verdi)/(Opprinnelig verdi) ∙ 100 %\n",
     "def beregn_prosentendring(ny_verdi=None, opprinnelig_verdi=None, endring_i_prosent=None):\n",
     "    try:\n",
@@ -826,7 +846,9 @@
   {
    "cell_type": "markdown",
    "id": "6c2bff4e-d34a-4f3e-8899-90028331e8d7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# $\\color{green}{\\text{Kapittel 2 - Personlig økonomi}}$"
    ]
@@ -1827,7 +1849,9 @@
   {
    "cell_type": "markdown",
    "id": "9115020b-c8f7-4a8e-89e2-f89408181cac",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# $\\color{blue}{\\text{Kapittel 3 - Formler og geometri}}$"
    ]
@@ -4498,7 +4522,9 @@
   {
    "cell_type": "markdown",
    "id": "7ed278b4-1efc-4b57-ac33-bd7c26df5456",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# $\\color{green}{\\text{Kapittel 4 - Statistikk}}$"
    ]
@@ -4809,7 +4835,9 @@
   {
    "cell_type": "markdown",
    "id": "1199ea16-1315-49b5-ba5c-902e75a2dc7e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# $\\color{red}{\\text{Kapittel 5 - Yrkesøkonomi}}$"
    ]
@@ -5382,7 +5410,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5396,7 +5424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
